syntax ="proto3";

import "user.proto";
import "error.proto";


message LoginUserReq {
 string username=1;
 string passwordHash=2;
}

message LoginUserRes {
 User user=1;
 optional Error error=2;

}

message RegisterUserReq {
  User user=1;
}
message RegisterUserRes{
 User user=1;
 optional Error error=2;
}

service AuthService {

 rpc login (LoginUserReq) returns (LoginUserRes);
 
 rpc register(RegisterUserReq) returns (RegisterUserRes);
}
