syntax ="proto3";
//package protos;
import "google/protobuf/timestamp.proto";
import "article.proto";
import "ticket.proto";
import "error.proto";
import "address.proto";
import "payment.proto";
import "subscription.proto";
//option experimental_allow_proto3_optional=true;

message User {
message Email{
   string value=1;
   optional string verified=2;
  }
 int32 id=1;
 optional string type=2;
 optional string username=3;
  string firstname=4;
  string lastname=5;
  int32 age=6;
  optional int32 IDcardNumber=7;
  Email email=8;
  optional string passwordHash=9;
  repeated Article articles =10;
  repeated Ticket tickets=11;
  repeated Payment payments=12;
  repeated Subscription subscriptions=13;
  Address address=14;
  optional string referedBy=15;
  optional string referralCode=16;
  optional google.protobuf.Timestamp created_at = 17;
  optional google.protobuf.Timestamp updated_at = 18;
 
 //optional repeated int32 articleIds=10
 //optional repeated int32 ticketIds=10
}

message CreateUserReq {
  User user=1;
}
message CreateUserRes{
 User user=1;
}

message GetUserIdReq {
  int32 userId=1;

}
message GetUserIdRes{
 User user=1;
 optional Error error=2;

}

message GetAllUserReq{
 optional string type=1;

}

message GetAllUserRes{
  repeated User users=1;
  optional Error error=2;

}

service UserService {
  rpc create(CreateUserReq) returns(
  CreateUserRes);
  rpc  id(GetUserIdReq) returns(GetUserIdRes);
  rpc all( GetAllUserReq)  returns ( GetAllUserRes );

}
